# Tetragramm.github.io

./: .gitattributes  .gitignore  CLAUDE.md  COMPONENT_DEVELOPMENT_GUIDE.md  ENGINE_BUILDER_TRANSLATION_NOTES.md  Plane Construction Rules 10 (EXPERIMENTAL).docx  README.md  WASM_BUILD.md  engines.json  flex_layout_api_options.md  generate_components.py  index.html  package-lock.json  package.json  parts.json  plane_builder.js  plane_builder.ts  server.py  strings.json  temp.js  weapons.json  yaml_to_translations.py
flyingcircusrust/: .gitignore  Cargo.toml  locales_to_yaml.py
flyingcircusrust/locales/: app.yaml
flyingcircusrust/locales_old/: de.json  en.json  es.json  fr.json
flyingcircusrust/src/: electric_builder.rs  engine_list.rs  engine_list_generated.rs  era.rs  json.rs  lib.rs  part.rs  part_list.rs  passengers.rs  propeller_builder.rs  pulsejet_builder.rs  serialization.rs  stats.rs  turbo_builder.rs  types.rs  weapon_list.rs
flyingcircusrust/src/accessories/: core.rs  json.rs  mod.rs  part.rs  queries.rs  serialization.rs  setters.rs  tests.rs
flyingcircusrust/src/aircraft/: derived_stats.rs  json.rs  mod.rs  part.rs  queries.rs  serialization.rs  tests.rs
flyingcircusrust/src/alter/: core.rs  json.rs  mod.rs  part.rs  queries.rs  serialization.rs  setters.rs
flyingcircusrust/src/cargo/: core.rs  json.rs  mod.rs  part.rs  queries.rs  serialization.rs  tests.rs
flyingcircusrust/src/cockpit/: json.rs  mod.rs  tests.rs
flyingcircusrust/src/cockpits/: json.rs  mod.rs  serialization.rs  ui.rs
flyingcircusrust/src/control_surfaces/: core.rs  json.rs  mod.rs  part.rs  queries.rs  serialization.rs  setters.rs  tests.rs
flyingcircusrust/src/engine/: core.rs  json.rs  mod.rs  mounted.rs  part.rs  queries.rs  serialization.rs  setters.rs  tests.rs  validation.rs
flyingcircusrust/src/engines/: json.rs  mod.rs  part.rs  serialization.rs  ui.rs
flyingcircusrust/src/frames/: core.rs  json.rs  mod.rs  part.rs  queries.rs  setters.rs  tests.rs  ui.rs
flyingcircusrust/src/fuel/: core.rs  json.rs  mod.rs  part.rs  queries.rs  setters.rs  tests.rs  validation.rs
flyingcircusrust/src/landing_gear/: core.rs  json.rs  mod.rs  part.rs  queries.rs  serialization.rs  setters.rs  tests.rs  validation.rs
flyingcircusrust/src/munitions/: core.rs  json.rs  mod.rs  part.rs  queries.rs  setters.rs  validation.rs
flyingcircusrust/src/optimization/: core.rs  json.rs  mod.rs  part.rs  queries.rs  serialization.rs  setters.rs  tests.rs  validation.rs
flyingcircusrust/src/propeller/: core.rs  json.rs  mod.rs  part.rs  queries.rs  serialization.rs  setters.rs  (+1 more)
flyingcircusrust/ui_core/: Cargo.toml
flyingcircusrust/ui_macro/: Cargo.toml
flyingcircustypst/: Cargo.toml
flyingcircustypst/src/: lib.rs
flyingcircuswasm/: Cargo.toml  generate_engine_lists.py  test.rs
flyingcircuswasm/locales/: app.yaml  de.json  en.json  es.json
flyingcircuswasm/src/: aircraft.rs  cockpit.rs  cockpits.rs  electric_builder.rs  engine.rs  engine_list.rs  engines.rs  era.rs  json.rs  lib.rs  localization.rs  part.rs  part_list.rs  passengers.rs  propeller_builder.rs  pulsejet_builder.rs  radiator.rs  serialization.rs  stats.rs  turbo_builder.rs  types.rs  utils.rs  weapon_list.rs
(+775 files in other folders)
