[package]
name = "flyingcircuswasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
    "cdylib",
    "rlib",
] # Compile to dynamic system library and Rust library format

[dependencies]
rust-i18n = "3"
itertools = "0.14.0"
serde_json = "1.0.140"
# Add wasm-bindgen dependency
wasm-bindgen = "0.2.100"
byteorder = "1.5"
encoding_rs = "0.8"
formatx = "0.2.4"
lz-str = "0.2.1"
ui_core = { path = "./ui_core" }
ui_macro = { path = "./ui_macro" }
assert-json-diff = "2.0.2"
