[package]
name = "flyingcircuswasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flyingcircusrust = { path = "../flyingcircusrust" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"
rust-i18n = "3"

[profile.release]
lto = true
opt-level = "z" # Optimize for size
