[package]
name = "flyingcircuswasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flyingcircusrust = { path = "../flyingcircusrust" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"
rust-i18n = "3"

# Modern rustc (1.87+) emits bulk-memory/sign-ext/etc. for wasm32; the system
# wasm-opt validates with those off by default, so enable them explicitly.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
]

[profile.release]
lto = true
opt-level = "z"      # Optimize for size
panic = "abort"      # Drop unwinding tables / landing pads (panic hook still runs before abort)
codegen-units = 1    # Better cross-function size optimization under LTO
strip = true         # Strip remaining symbols/debuginfo
